[package]
name = "dogecoin"
version = "0.1.0"
authors = ["xiaohuo <xiaohuo200@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = { version = "0.9.0", default-features = false, features = ["codec"] }