[package]
name = "dogecoin"
version = "0.1.0"
authors = ["xiaohuo <xiaohuo200@gmail.com>"]
edition = "2018"

[dependencies]
sp-core = { default-features = false, version = '2.0.1' }
sp-io = { default-features = false, version = '2.0.1' }
sp-runtime = { default-features = false, version = '2.0.1' }
sp-std = { default-features = false, version = '2.0.1' }
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }


[dev-dependencies]
sp-core = { default-features = false, version = '2.0.1' }
sp-io = { default-features = false, version = '2.0.1' }
sp-runtime = { default-features = false, version = '2.0.1' }
sp-std = { default-features = false, version = '2.0.1' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    "sp-core/std",
    "sp-std/std",
]
